# rispy

./: .flake8  .gitignore  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  config.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml  publish.yml
RISparser/: __init__.py  config.py  parser.py
benchmark/: rispy_benchmark.py
rispy/: __init__.py  config.py  parser.py  utils.py  writer.py
tests/: example_basic.ris  example_full.ris  example_multi_unknown_tags.ris  example_single_unknown_tag.ris  multiline.ris  test_benchmark.py  test_parser.py  test_utils.py  test_writer.py
tests/data/: example_basic.ris  example_bom.ris  example_custom_list_tags.ris  example_empty_tag.ris  example_endnote.ris  example_extraneous_data.ris  example_full.ris  example_full_without_whitespace.ris  example_full_write.ris  example_multi_unknown_tags.ris  example_multiline.ris  example_multiline_multitag.ris  example_pubmed.txt  example_starting_newlines.ris  example_urls.ris  example_utf_chars.ris  example_wos.ris  multiline.ris  quickstart.ris
