[metadata]
name = rispy
author = Maik Derstappen (MrTango)
author_email = md@derico.de
license = MIT
description = A Python reader/writer of RIS reference files
keywords = RIS, parser, bibliograph
url = https://github.com/mrtango/rispy
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
packages = find:
setup_requires = setuptools>=43; wheel; toml; setuptools_scm>=3.4

[options.packages.find]
exclude = contrib; docs; tests*

[options.extras_require]
dev = black==21.5b1; flake8==3.7.9; check-manifest; wheel
test = coverage; pytest
