[metadata]
name = rispy
author = Maik Derstappen (MrTango)
author_email = md@derico.de
license = MIT
version = attr: rispy.__version__
description = A Python reader/writer of RIS reference files
keywords = RIS, parser, bibliograph
url = https://github.com/mrtango/rispy
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
packages = find:

[options.packages.find]
exclude = contrib; docs; tests*

[options.extras_require]
dev = black==23.3.0; flake8==6.0.0; check-manifest; wheel
test = coverage; pytest
